# RobotCar

./: .gitignore  CMakeLists.txt  README.md  main.c
barcode/: CMakeLists.txt  barcode.c  barcode.h
car/: CMakeLists.txt
car/encoder/: CMakeLists.txt  encoder.c  encoder.h
car/ir/barcode/: CMakeLists.txt  barcode.c  barcode.h
car/ir/line_following/: CMakeLists.txt  line_following.c  line_following.h
car/main/: CMakeLists.txt  FreeRTOSConfig.h  main.c
car/motor/: CMakeLists.txt  motor.c  motor.h
car/ultrasonic/: ultrasonic.c  ultrasonic.h
car/wifi/: CMakeLists.txt
car/wifi/tcp_server/: CMakeLists.txt  picow_tcp_server.c
dashboard/: CMakeLists.txt
dashboard/wifi/: CMakeLists.txt
dashboard/wifi/tcp_server/: CMakeLists.txt  picow_tcp_server.c
encoder/: CMakeLists.txt  encoder.c  encoder.h
ir/: CMakeLists.txt
ir/barcode/: CMakeLists.txt  barcode.c  barcode.h
ir/barcodeADC/: CMakeLists.txt  barcodeADC.c
ir/line_following/: CMakeLists.txt  FreeRTOSConfig.h  line_following.c  line_following.h
ir/surface_contrast/: CMakeLists.txt  surface_contrast.c
line_following/: CMakeLists.txt  FreeRTOSConfig.h  line_following.c  line_following.h
magneto/: CMakeLists.txt  gy511.c  gy511.h
magneto_remote/: CMakeLists.txt
magneto_remote/magneto/: CMakeLists.txt  gy511.c  gy511.h
magneto_remote/main/: CMakeLists.txt  main.c
magneto_remote/wifi/: CMakeLists.txt
magneto_remote/wifi/tcp_client/: CMakeLists.txt  picow_tcp_client.c  tcp_client.h
main/: CMakeLists.txt  main.c
motor/: CMakeLists.txt  motor.c  motor.h
server/: CMakeLists.txt
server/main/: CMakeLists.txt
server/wifi/tcp_server/: CMakeLists.txt
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
wifi/: CMakeLists.txt  lwipopts.h  wifi.c
wifi/tcp_client/: CMakeLists.txt  picow_tcp_client.c
wifi/tcp_server/: picow_tcp_server.c  tcp_server.h
